[tool.poetry]
name = "imgprofi"
version = "0.0.1"
description = "A tiny library to generate imgproxy signed url"
authors = ["Vladislav_Gorelov <rap-is-kal-again@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
