[tool.poetry]
name = "imgproxy_python"
version = "0.0.2"
description = "A tiny library to simplify generation of imgproxy urls"
authors = ["Vladislav_Gorelov <rap-is-kal-again@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
